i made some corrections on my work

--- a/unsplash.html
+++ b/unsplash.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Unsplash</title>
     <link rel="stylesheet" href="unsplash.css">
 </head>
 <body>
@@ -35,25 +35,25 @@
         
 
     </nav>
-
+   
     <div class="cway">
         <div>
             <img src="./photo-1682686580922-2e594f8bdaa7.jpeg" alt="">
         </div>
 
         <div>
-            <img src="./photo-1682686581663-179efad3cd2f.jpeg" alt="" style="width: 90%; height: 90%;">
+            <img src="./photo-1682686581663-179efad3cd2f.jpeg" alt="">
         </div>
 
         <div>
             <img src="./photo-1682687218147-9806132dc697.jpeg" alt="">
         </div>
         
-        <div>
+        <div >
             <img src="./photo-1682687218608-5e2522b04673.jpeg" alt="">
         </div>
 
-        <div>
+        <div class="five">
             <img src="./photo-1682687219612-b12805df750d.jpeg" alt="">
         </div>
 
